<resources>
    <string name="app_name">SkillsSwapping</string>
    <string name="post_a_skill">NEW POST</string>
    <string name="myy_post">MY POSTS</string>
    <string name="likes_view">LIKES</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_view">profileView</string>
    <string name="job_view">Job</string>
    <string name="name_view">Name</string>
    <string name="user_view_header">User</string>
</resources>
